# wdb-demload

./: .gitignore  Makefile.am  NEWS  README  configure.ac
config/: googletest.m4  qt.m4  wdbLoaderBase.m4  wdb_postgres.m4
config/m4/: .gitignore  wdb_boost.m4
debian_files/: changelog  control  demload.postinst  demload.postrm  postinst  rules  wdb-demload-1.2.install  wdb-terrain-norway-25m.postinst
doc/: demLoad.man.xml  demLoad.mk
src/: demLoad.mk  main.cpp
src/configuration/: DemLoadConfiguration.h  demLoad.mk
src/dem/: DemException.h  DemFile.cpp  DemFile.h  demLoad.mk
src/dem/internal/: Section.cpp  Section.h  SectionA.cpp  SectionA.h  SectionB.cpp  SectionB.h  ValueInterpreter.h  demLoad.mk
src/geometry/: Point.cpp  Point.h  Polygon.cpp  Polygon.h  demLoad.mk
test/: DemFileTest.cpp
test/dataTest/: samples.txt  test.py
